# Tau2-RL-Pipeline

./: .gitignore  README.md  pyproject.toml
configs/: .env.template
eval/: eval_passk.py
scripts/: start_user_sim.sh  train_grpo.sh  train_sft.sh
tau2_rl_pipeline/: __init__.py  actions.py  env.py  prompting.py  reward.py  rollout.py  tasks.py
